[package]
name = "telegram-bot-payfree"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["技术支持：临来笑笑生 <luck@xust.net>"]

#   2024.12.05   临来笑笑生

[dependencies]
# https://crates.io/
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread","fs"] }
warp = { version = "0.3.7", features = ["tls","multipart","websocket"] }

# Telegram bots 
teloxide = { version = "0.13", features = ["macros"] }

# json
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_derive = "1.0.215"

pretty_env_logger = "0.5.0"
log = "0.4.22"